syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/domain/eventdata";

package eventdata;

message ClusterRegistered {
  // Name of the cluster, to be presented to humans
  string name = 1;

  // Unique label of the cluster, to be utilized for generating unique labels
  // and symbols, e.g. with metrics.
  string label = 2;

  // Address of the KubeApiServer
  string api_server_address = 3;

  // CA certificate of the K8s cluster
  bytes ca_certificate_bundle = 4;
}

message ClusterCreated {
  // Name of the cluster, to be presented to humans
  string name = 1;

  // Unique label of the cluster, to be utilized for generating unique labels
  // and symbols, e.g. with metrics.
  string label = 2;

  // Address of the KubeApiServer
  string api_server_address = 3;

  // CA certificate of the K8s cluster
  bytes ca_certificate_bundle = 4;
}

message ClusterBootstrapTokenCreated {
  // JsonWebToken for cluster bootstrap
  string JWT = 1;
}

message ClusterCertificateRequested { bytes certificateSigningRequest = 1; }